external-crates/move/move-compiler/tests/move_2024/typing/dot_call_unbound.exp
error[E03003]: unbound module member
  ┌─ tests/move_2024/typing/dot_call_unbound.move:8:5
  │
8 │     x.f();
  │     ^^^^^ Unable to resolve method call syntax for type '0x42::t::X'. Unbound function 'f' in module '0x42::t'

error[E03003]: unbound module member
   ┌─ tests/move_2024/typing/dot_call_unbound.move:20:5
   │
20 │     x.f();
   │     ^^^^^ Unable to resolve method call syntax for type '0x42::t::X'. Unbound function 'f' in module '0x42::t'

error[E03003]: unbound module member
   ┌─ tests/move_2024/typing/dot_call_unbound.move:21:5
   │
21 │     y.x.f();
   │     ^^^^^^^ Unable to resolve method call syntax for type '0x42::t::X'. Unbound function 'f' in module '0x42::t'

